# diplom

./: .gitignore  CMakeLists.txt  README.md  differ.py  l_time  loc_max  lyapun1  lyapun2  lyapun3  three.py  w_time
01_sie/: Dll1.cpp
02_diff/: CMakeLists.txt  threeEq.py  threeSystem.cpp
03_lyap/: CMakeLists.txt  lyapunov.cpp  lyapunov.py
modules/00_math_model/include/: math_model.h
modules/00_math_model/src/: math_model.cpp
modules/01_lyapunov/: lyapunov.cpp  test_lyapunov.py
modules/02_bifurcation/: bifurcation.cpp  test_bifurcation.py
modules/03_time_series/: test_time_series.py  time_series.cpp
res/new/: l_time  loc_max  lyapun1  lyapun2  lyapun3  w_time
